--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     Контакты
                 </a></li>
             </ul>
-            <a href="" class="ava">
+            <a href="#window" class="ava">
                 <img src="img/header-bg.jpg" alt="" class="ava__img">
             </a>
        </nav>
@@ -129,7 +129,7 @@
             </div>
         </div> 
    </footer>
-   <div class="window">
+   <div class="window" id="window">
         <form action="" class="window__form">
             <a href="" class="window__close">
                 <i class="fal fa-times-circle"></i>
