--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
        <div class="container">
            <div class="header__content">
                <div class="header__box">
-                   <h1 class="header__title">Welcome to All Marketing</h1>
+                   <h1 class="header__title">Welcome to My Site</h1>
                </div>
                <p class="header__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor</p>
                <a href="" class="btn header__btn">Подробнее</a>
